# metapp

./: .gitignore  CHANGES.md  COPYING  LICENSE  Makefile  README.md  dune-project  metapp.opam  metapp.opam.template
api/: dune  metapp_api.ml
dyncompile/: dune  dyncompile.ml  options.ml
metapp/: accu.mli  dune  metapp.ml  metapp.mli
ppx/: accu.ml  dune  findlib_for_ppx.ml  metapp_ppx.ml
preutils/: dune  metapp_preutils.ml
tests/deep/: deep.ml  dune
tests/framework/: dune  test_framework.ml
tests/multistage/: dune  multistage.ml
tests/simple/: dune  simple.ml
tests/sub_holes/: dune  sub_holes.ml
tests/utils/: dune  test_utils.ml
utils/: dune  metapp_utils.ml  metapp_utils.mli
version_info/: dune  metapp_version_info.ml  metapp_version_info.mli
