(library
  (name metapp_ppx)
  (public_name metapp.ppx)
  (preprocess (pps ppxlib.metaquot))
  (kind ppx_rewriter)
; +warning 32: Unused value declaration.
; +warning 34: Unused type declaration.
; -warning 40: Constructor or label name used out of scope. (OCaml <=4.06.0)
  (flags -open Stdcompat -w +32+34-40)
  (libraries ppxlib compiler-libs stdcompat dynlink
     findlib.dynload metapp_preutils metapp_api unix dyncompile))
